# games

./: README.md  cli_game.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
agents/: human_agent.py  minimax_agent.py  random_agent.py
deployment/: build_complete.py  build_static.py
games/: base_game.py  connectfour_game.py  halving_game.py  nim_game.py  tictactoe_game.py
static/: script.js  style.css
templates/: base.html  connectfour.html  halving.html  index.html  nim.html  tictactoe.html
