[project]
name = "games"
version = "0.1.0"
description = "A collection of games with AI agents - Halving Game and Tic-Tac-Toe"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "numpy>=2.3.1",
]
